Create buttons in the document

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 
     <script src="script.js"></script>
+
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>
     
 </body>
 </html>
