add divs displaying running score of current game

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <button id="scissors">SCISSORS</button>
     </div>   
 
-    <div id="results">
-        
-    </div>
+    <div id="results"></div>
+
+    <div id="user_score"></div>
+    <div id="computer_score"></div>
 </body>
 </html>
