implement all basic functionalities

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 
     <div id="user_score"></div>
     <div id="computer_score"></div>
+
+    <div id="whos_winner"></div>
+    <button id="restart">PLAY AGAIN</button>
 </body>
 </html>
